--- a/app/views/registration/confirmations/new.html.erb
+++ b/app/views/registration/confirmations/new.html.erb
@@ -1,22 +1,25 @@
 <% content_for :title, "Resend Confirmation" %>
+<% content_for :body_class, "bg-white sm:bg-slate-100" %>
 
-<%= render SmallBoxComponent.new(title: "Resend Confirmation") do |c| %>
-  <% c.with_notice do %>
-    <p class="fs-5">Enter your email address and we'll send you a new confirmation link.</p>
-  <% end %>
+<div class="mx-auto w-full max-w-full space-y-6 px-4 sm:max-w-2xl sm:px-0" data-controller="autofocus">
+  <div class="ff-card">
+    <div class="ff-card__body">
+      <h1 class="ff-card__title">Resend Confirmation</h1>
+      <p class="ff-text">Enter your email and we'll send you a new confirmation link.</p>
 
-  <% c.with_footer do %>
-    <%= link_to "Back to sign in", new_session_path, class: "text-muted" %>
-  <% end %>
+      <%= form_with url: registration_confirmations_path, method: :post, local: true do |form| %>
+        <div class="space-y-6">
+          <div class="ff-form-group">
+            <%= form.label :email_address, "Email", class: "ff-form-label" %>
+            <%= form.email_field :email_address, class: "ff-form-input", autofocus: true, required: true %>
+          </div>
+        </div>
 
-  <%= form_with url: registration_confirmations_path, method: :post, local: true do |form| %>
-    <div class="mb-4">
-      <%= form.label :email_address, "Email", class: "form-label fw-bold" %>
-      <%= form.email_field :email_address, class: "form-control form-control-lg", autofocus: true, required: true %>
+        <div class="ff-card__footer">
+          <%= link_to "Back to sign in", new_session_path, class: "ff-link" %>
+          <%= form.submit "Send confirmation email", class: "ff-button" %>
+        </div>
+      <% end %>
     </div>
-
-    <div class="d-flex gap-2">
-      <%= form.submit "Send Confirmation Email", class: "btn btn-primary btn-lg" %>
-    </div>
-  <% end %>
-<% end %>
+  </div>
+</div>
