--- a/app/views/registration/confirmation_pendings/show.html.erb
+++ b/app/views/registration/confirmation_pendings/show.html.erb
@@ -1,5 +1,5 @@
 <% content_for :title, "Check Your Email" %>
-<% content_for :body_class, "bg-white sm:bg-slate-100" %>
+<% content_for :body_class, "sm:bg-slate-100" %>
 
 <div class="mx-auto w-full max-w-full space-y-6 px-4 sm:max-w-2xl sm:px-0">
   <div class="ff-card">
